     in order to comply with RFC 4253.  bz #1443, ok djm@
   - stevesk@cvs.openbsd.org 2008/07/01 23:12:47
     [PROTOCOL.agent]
     fix some typos; ok djm@
   - djm@cvs.openbsd.org 2008/07/02 02:24:18
     [sshd_config sshd_config.5 sshd.8 servconf.c]
     increase default size of ssh protocol 1 ephemeral key from 768 to 1024
     bits; prodded by & ok dtucker@ ok deraadt@

20080630
 - (djm) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2008/06/10 23:13:43
     [regress/Makefile regress/key-options.sh]
     Add regress test for key options.  ok djm@
   - dtucker@cvs.openbsd.org 2008/06/11 23:11:40
     [regress/Makefile]
     Don't run cipher-speed test by default; mistakenly enabled by me
   - djm@cvs.openbsd.org 2008/06/28 13:57:25
     [regress/Makefile regress/test-exec.sh regress/conch-ciphers.sh]
     very basic regress test against Twisted Conch in "make interop"
     target (conch is available in ports/devel/py-twisted/conch);
     ok markus@
 - (djm) [regress/Makefile] search for conch by path, like we do putty

20080629
 - (djm) OpenBSD CVS Sync
   - martynas@cvs.openbsd.org 2008/06/21 07:46:46
     [sftp.c]
     use optopt to get invalid flag, instead of return value of getopt,
     which is always '?';  ok djm@
   - otto@cvs.openbsd.org 2008/06/25 11:13:43
     [key.c]
     add key length to visual fingerprint; zap magical constants;
     ok grunk@ djm@
   - djm@cvs.openbsd.org 2008/06/26 06:10:09
     [sftp-client.c sftp-server.c]
     allow the sftp chmod(2)-equivalent operation to set set[ug]id/sticky
     bits. Note that this only affects explicit setting of modes (e.g. via
     sftp(1)'s chmod command) and not file transfers. (bz#1310)
     ok deraadt@ at c2k8
   - djm@cvs.openbsd.org 2008/06/26 09:19:40
     [dh.c dh.h moduli.c]
     when loading moduli from /etc/moduli in sshd(8), check that they
     are of the expected "safe prime" structure and have had
     appropriate primality tests performed;
     feedback and ok dtucker@